完成模板解析等基本接口
